--- a/index.html
+++ b/index.html
@@ -3,14 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./styles/normalize.css">
   <title>Научиться учиться</title>
 </head>
 <body>
   <div class="page">
     <header class="header">
-
+      <div class="logo logo_place_header">
+        <div class="logo__svg"></div>
+      </div>
+      <h1 class="header__title">Научиться учиться</h1>
+      <h2 class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать</a></h2>
+      <!-- TODO: alt -->
+      <img class="header__main-illustration" src="./images/header-image.png" alt="Опять двойка">
+      <div class="header__square-pic"></div>
     </header>
-    <main class="content">
+    <!-- <main class="content">
       <section class="description">
       </section>
 
@@ -25,7 +34,7 @@
     </main>
     <footer class="footer">
 
-    </footer>
+    </footer> -->
   </div>
 </body>
 </html>
