--- a/index.html
+++ b/index.html
@@ -19,20 +19,30 @@
       <img class="header__main-illustration" src="./images/header-image.png" alt="Опять двойка">
       <div class="header__square-pic"></div>
     </header>
-    <!-- <main class="content">
+    <main class="content">
       <section class="description">
+        <div class="two-columns">
+          <div class="two-columns__brief">
+            <h3 class="two-columns__text">Главные проблемы в обучении</h3>
+          </div>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+            <p class="two-columns__paragraph two-columns__paragraph_marg"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+            <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+          </div>
+        </div>
       </section>
 
-      <section class="digits">
+      <!-- <section class="digits">
       </section>
 
       <section class="feinman">
       </section>
 
       <section class="kaufman">
-      </section>
+      </section> -->
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
 
     </footer> -->
   </div>
