--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
   <div class="page">
     <header class="header">
       <div class="logo logo_place_header">
-        <div class="logo__svg"></div>
+        <img class="logo__svg" src="../images/logo_place_header.svg" alt="Логотип Яндекс Практикума">
       </div>
       <h1 class="header__title">Научиться учиться</h1>
-      <h2 class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать</a></h2>
-      <!-- TODO: alt -->
+      <h2 class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать &rarr;</a></h2>
       <img class="header__main-illustration" src="./images/header-image.png" alt="Опять двойка">
       <div class="header__square-pic"></div>
     </header>
@@ -27,7 +26,7 @@
           </div>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-            <p class="two-columns__paragraph two-columns__paragraph_marg"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+            <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
             <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
         </div>
@@ -78,10 +77,13 @@
         </table>
       </section>
 
-      <!-- <section class="feinman">
+      <section class="feinman">
+        <h2 class="feinman__title">Метод Фейнмана</h2>
+        <h3 class="feinman__subtitle">Выучить и не забыть.</h3>
+        <a class="feinman__link" href="#">Подробнее &rarr;</a>
       </section>
 
-      <section class="kaufman">
+      <!-- <section class="kaufman">
       </section> -->
     </main>
     <!-- <footer class="footer">
