--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 <body>
   <div class="page">
     <header class="header">
-      <div class="logo logo_place_header">
-        <img class="logo__svg" src="../images/logo_place_header.svg" alt="Логотип Яндекс Практикума">
-      </div>
+      <img class="logo logo_place_header" src="../images/logo_place_header.svg" alt="Логотип Яндекс Практикума">
       <h1 class="header__title">Научиться учиться</h1>
       <h2 class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать &rarr;</a></h2>
       <img class="header__main-illustration" src="./images/header-image.png" alt="Опять двойка">
@@ -135,9 +133,30 @@
         <div class="kaufman__triangle"></div>
       </section>
     </main>
-    <!-- <footer class="footer">
-
-    </footer> -->
+    <footer class="footer">
+      <div class="footer__columns">
+        <div class="footer__column footer__column_content_copyroght">
+          <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип Яндекс Практикума">
+          <p class="footer__author">&copy;2020. Никита Бакарев</p>
+        </div>
+        <div class="footer__column footer__column_content_info">
+          <h2 class="footer__column-heading">О Практикуме</h2>
+          <ul class="footer__column-links">
+            <li><a class="footer__link" href="#">Главная</a></li>
+            <li><a class="footer__link" href="#">Концепция</a></li>
+            <li><a class="footer__link" href="#">Наставники</a></li>
+          </ul>
+        </div>
+        <div class="footer__column footer__column_content_social">
+          <h2 class="footer__column-heading">Соцсети</h2>
+          <ul class="footer__social-list">
+            <li class="footer__line"><a class="footer__link" href="#"><img class="footer__social-icon" src="./images/facebook_color_white.svg">Facebook</a></li>
+            <li class="footer__line"><a class="footer__link" href="#"><img class="footer__social-icon" src="./images/vk_color_white.svg">ВКонтакте</a></li>
+            <li class="footer__line"><a class="footer__link" href="#"><img class="footer__social-icon" src="./images/instagram_color_white.svg">Instagram</a></li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </div>
 </body>
 </html>
