--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="page">
     <header class="header">
-      <img class="logo logo_place_header" src="../images/logo_place_header.svg" alt="Логотип Яндекс Практикума">
+      <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="Логотип Яндекс Практикума">
       <h1 class="header__title">Научиться учиться</h1>
       <h2 class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать &rarr;</a></h2>
       <img class="header__main-illustration" src="./images/header-image.png" alt="Опять двойка">
@@ -19,9 +19,7 @@
     <main class="content">
       <section class="description">
         <div class="two-columns">
-          <div class="two-columns__brief">
-            <h3 class="two-columns__text">Главные проблемы в обучении</h3>
-          </div>
+          <h3 class="two-columns__brief">Главные проблемы в обучении</h3>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
             <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
@@ -75,10 +73,10 @@
         </table>
       </section>
 
-      <section class="feinman">
-        <h2 class="feinman__title">Метод Фейнмана</h2>
-        <h3 class="feinman__subtitle">Выучить и не забыть.</h3>
-        <a class="feinman__link" href="#">Подробнее &rarr;</a>
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
+        <a class="feynman__link" href="#">Подробнее &rarr;</a>
       </section>
 
       <section class="kaufman flex-column">
@@ -135,9 +133,9 @@
     </main>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column footer__column_content_copyroght">
+        <div class="footer__column footer__column_content_copyright">
           <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип Яндекс Практикума">
-          <p class="footer__author">&copy;2020. Никита Бакарев</p>
+          <p class="footer__author">&copy; 2020. Никита Бакарев</p>
         </div>
         <div class="footer__column footer__column_content_info">
           <h2 class="footer__column-heading">О Практикуме</h2>
@@ -150,9 +148,9 @@
         <div class="footer__column footer__column_content_social">
           <h2 class="footer__column-heading">Соцсети</h2>
           <ul class="footer__social-list">
-            <li class="footer__line"><a class="footer__link" href="#"><img class="footer__social-icon" src="./images/facebook_color_white.svg">Facebook</a></li>
-            <li class="footer__line"><a class="footer__link" href="#"><img class="footer__social-icon" src="./images/vk_color_white.svg">ВКонтакте</a></li>
-            <li class="footer__line"><a class="footer__link" href="#"><img class="footer__social-icon" src="./images/instagram_color_white.svg">Instagram</a></li>
+            <li class="footer__line"><a class="footer__link" href="#"><img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Facebook">Facebook</a></li>
+            <li class="footer__line"><a class="footer__link" href="#"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Вконтакте">ВКонтакте</a></li>
+            <li class="footer__line"><a class="footer__link" href="#"><img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Instagram">Instagram</a></li>
           </ul>
         </div>
       </div>
