--- a/index.html
+++ b/index.html
@@ -31,46 +31,42 @@
       <section class="digits">
         <h2 class="section-title digits__section-title">Цифры и факты</h2>
         <p class="section-subtitle">Про учёбу и мозг</p>
-        <table class="table digits__table">
-          <tr class="table__row">
-            <td class="table__cell">
-              <h4 class="table__heading">86 миллиардов</h4>
-              <p class="table__text">Число нейронов в мозге человека</p>
-            </td>
-            <td class="table__cell">
-              <h4 class="table__heading">2.1 миллиарда</h4>
-              <p class="table__text">Число нуждающихся в повышении квалификации</p>
-              <p class="table__text">Всемирный Банк, 2017</p>
-            </td>
-            <td class="table__cell">
-              <h4 class="table__heading">1000 терабайт</h4>
-              <p class="table__text">Объём памяти человека</p>
-            </td>
-            <td class="table__cell">
-              <h4 class="table__heading">500 триллионов</h4>
-              <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
-            </td>
-          </tr>
-          <tr class="table__row">
-            <td class="table__cell">
-              <h4 class="table__heading">420 миллионов</h4>
-              <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
-              <p class="table__text">Всемирный Банк, 2017</p>
-            </td>
-            <td class="table__cell">
-              <h4 class="table__heading">17–20 лет</h4>
-              <p class="table__text">Пик обучаемости</p>
-            </td>
-            <td class="table__cell">
-              <h4 class="table__heading">1885 год</h4>
-              <p class="table__text">Открытие кривой забывания</p>
-            </td>
-            <td class="table__cell">
-              <h4 class="table__heading">1889 год</h4>
-              <p class="table__text">Открытие условного рефлекса</p>
-            </td>
-          </tr>
-        </table>
+        <ul class="table digits__table">
+          <li class="table__cell">
+            <h4 class="table__heading">86 миллиардов</h4>
+            <p class="table__text">Число нейронов в мозге человека</p>
+          </li>
+          <li class="table__cell">
+            <h4 class="table__heading">2.1 миллиарда</h4>
+            <p class="table__text">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
+          </li>
+          <li class="table__cell">
+            <h4 class="table__heading">1000 терабайт</h4>
+            <p class="table__text">Объём памяти человека</p>
+          </li>
+          <li class="table__cell">
+            <h4 class="table__heading">500 триллионов</h4>
+            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          </li>
+          <li class="table__cell">
+            <h4 class="table__heading">420 миллионов</h4>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
+          </li>
+          <li class="table__cell">
+            <h4 class="table__heading">17–20 лет</h4>
+            <p class="table__text">Пик обучаемости</p>
+          </li>
+          <li class="table__cell">
+            <h4 class="table__heading">1885 год</h4>
+            <p class="table__text">Открытие кривой забывания</p>
+          </li>
+          <li class="table__cell">
+            <h4 class="table__heading">1889 год</h4>
+            <p class="table__text">Открытие условного рефлекса</p>
+          </li>
+        </ul>
       </section>
 
       <section class="feynman">
@@ -82,52 +78,48 @@
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
         <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
-        <table class="table table_theme_dark">
-          <tr class="table__row table__row_theme_dark">
-            <td class="table__cell table__cell_theme_dark">
-              <h4 class="table__heading table__heading_theme_dark">1</h4>
-              <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
-            </td>
-            <td class="table__cell table__cell_theme_dark">
-              <h4 class="table__heading table__heading_theme_dark">2</h4>
-              <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
-            </td>
-            <td class="table__cell table__cell_theme_dark">
-              <h4 class="table__heading table__heading_theme_dark">3</h4>
-              <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
-            </td>
-            <td class="table__cell table__cell_theme_dark">
-              <h4 class="table__heading table__heading_theme_dark">4</h4>
-              <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
-            </td>
-            <td class="table__cell table__cell_theme_dark">
-              <h4 class="table__heading table__heading_theme_dark">5</h4>
-              <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
-            </td>
-          </tr>
-          <tr class="table__row table__row_theme_dark">
-            <td class="table__cell table__cell_theme_dark">
-              <h4 class="table__heading table__heading_theme_dark">6</h4>
-              <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
-            </td>
-            <td class="table__cell table__cell_theme_dark">
-              <h4 class="table__heading table__heading_theme_dark">7</h4>
-              <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
-            </td>
-            <td class="table__cell table__cell_theme_dark">
-              <h4 class="table__heading table__heading_theme_dark">8</h4>
-              <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
-            </td>
-            <td class="table__cell table__cell_theme_dark">
-              <h4 class="table__heading table__heading_theme_dark">9</h4>
-              <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
-            </td>
-            <td class="table__cell table__cell_theme_dark">
-              <h4 class="table__heading table__heading_theme_dark">10</h4>
-              <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
-            </td>
-          </tr>
-        </table>
+        <ul class="table table_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">1</h4>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">2</h4>
+            <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">3</h4>
+            <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">4</h4>
+            <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">5</h4>
+            <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">6</h4>
+            <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">7</h4>
+            <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">8</h4>
+            <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">9</h4>
+            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">10</h4>
+            <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+          </li>
+        </ul>
         <div class="kaufman__triangle"></div>
       </section>
     </main>
