--- a/index.html
+++ b/index.html
@@ -69,6 +69,15 @@
         </ul>
       </section>
 
+      <section class="video">
+        <h1 class="section-title video__section-title">Видео нa TED</h1>
+        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+        <div class="video__iframes">
+          <iframe class="video__iframe" id="ytplayer" type="text/html" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" allowfullscreen></iframe>
+          <iframe class="video__iframe" id="ytplayer" type="text/html" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allowfullscreen></iframe>
+        </div>
+      </section>
+
       <section class="digits">
         <h2 class="section-title digits__section-title">Цифры и факты</h2>
         <p class="section-subtitle">Про учёбу и мозг</p>
