--- a/index.html
+++ b/index.html
@@ -195,7 +195,18 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <div class="kaufman__triangle"></div>
+        <div class="kaufman__triangle rotation"></div>
+      </section>
+
+      <section class="resources">
+        <h2 class="section-title resources__section-title">Полезные ресурсы</h2>
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <ul class="resources__logo-zone">
+          <li class="resources__logo"><img width="100%" height="100%" src="./images/resources-arzamas.svg" alt="Арзамас"></li>
+          <li class="resources__logo"><img width="100%" height="100%" src="./images/resources-n1.svg" alt="Н+1"></li>
+          <li class="resources__logo"><img width="100%" height="100%" src="./images/resources-strelka.svg" alt="Стрелка"></li>
+          <li class="resources__logo"><img width="100%" height="100%" src="./images/resources-polka.svg" alt="Полка"></li>
+        </ul>
       </section>
     </main>
     <footer class="footer">
