--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
       </section>
 
       <section class="video">
-        <h1 class="section-title video__section-title">Видео нa TED</h1>
+        <h2 class="section-title video__section-title">Видео нa TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
-          <iframe class="video__iframe" id="ytplayer" type="text/html" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" allowfullscreen></iframe>
-          <iframe class="video__iframe" id="ytplayer" type="text/html" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allowfullscreen></iframe>
+          <iframe class="video__iframe" id="ytplayer" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
+          <iframe class="video__iframe" id="ytplayer2" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
         </div>
       </section>
 
@@ -202,10 +202,10 @@
         <h2 class="section-title resources__section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <ul class="resources__logo-zone">
-          <li class="resources__logo"><img width="100%" height="100%" src="./images/resources-arzamas.svg" alt="Арзамас"></li>
-          <li class="resources__logo"><img width="100%" height="100%" src="./images/resources-n1.svg" alt="Н+1"></li>
-          <li class="resources__logo"><img width="100%" height="100%" src="./images/resources-strelka.svg" alt="Стрелка"></li>
-          <li class="resources__logo"><img width="100%" height="100%" src="./images/resources-polka.svg" alt="Полка"></li>
+          <li class="resources__logo"><a class="resources__link" href="#"><img class="resources__image" src="./images/resources-arzamas.svg" alt="Арзамас"></a></li>
+          <li class="resources__logo"><a class="resources__link" href="#"><img class="resources__image" src="./images/resources-n1.svg" alt="Н+1"></a></li>
+          <li class="resources__logo"><a class="resources__link" href="#"><img class="resources__image" src="./images/resources-strelka.svg" alt="Стрелка"></a></li>
+          <li class="resources__logo"><a class="resources__link" href="#"><img class="resources__image" src="./images/resources-polka.svg" alt="Полка"></a></li>
         </ul>
       </section>
     </main>
